# dtmaster-workflows-douglasleal

./: .gitignore  README.md  cluster.json
.github/workflows/: 01_setup.yml  02_prep.yml  03_model.yml  03_prep.yml  05_production.yml  explore.yml  helloworld.yml  ingest.yml  model.yml  production.yml  setup.yml
dougslldataplatform/: mkdocs.yml  pyproject.toml
dougslldataplatform/docs/: index.md
dougslldataplatform/docs/api/: cron.md
dougslldataplatform/dougslldataplatform/: cli.py  config.py  ingest.py
dougslldataplatform/resource/: config.yaml
dougslldataplatform/tests/: test_cli.py
dougsllenvsetup/setup-tf-adbuc/: .terraform.lock.hcl  locals.tf  main.tf  variables.tf
dougsllenvsetup/setup-tf-adbuc-poc/modules/adb-metastore/: main.tf
dougsllenvsetup/setup-tf-adbuc/modules/adb-metastore-and-users/: main.tf
dougsllenvsetup/setup-tf-azuretf/: main.tf  variables.tf
dougsllenvsetup/setup-tf-azuretf/modules/azure-aad-users/: main.tf
setup-azuretf/: .terraform.lock.hcl  main.tf  outputs.tf
setup-azuretf/modules/metastore-and-users/: main.tf  outputs.tf  variables.tf
setup-tf-adbuc/: .terraform.lock.hcl  .terraform.tfstate.lock.info  main.tf  variables.tf
setup-tf-adbuc/modules/adb-metastore-and-users/: main.tf
setup-tf-azuretf/: locals.tf  main.tf  outputs.tf  variables.tf
setup-tf-azuretf/modules/azure-aad-users/: main.tf
setup/setup-tf-adbuc-poc/: locals.tf  main.tf  variables.tf
setup/setup-tf-adbuc-poc/modules/adb-metastore/: variables.tf
setup/setup-tf-adbuc-poc/modules/adb-metastore-and-users/: main.tf
(+1 files in other folders)
